# reducer

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  reducer.py  requirements.txt  ruff.toml  setup.py
reducer/: reducer.py
reducer/driver/: clang_tidy.py  compiler_crash.py
reducer/lib/: driver.py  grep.py  log.py  prompt.py  setup.py
test/: test_reducer.py
test/project/: CMakeLists.txt
test/project/src/: ice64454.cpp  main.cpp
